# chip8-emulator

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs
roms/: LICENSE
ui-egui/: Cargo.toml
ui-egui/src/: main.rs
